# python-project-52

./: .coverage  .env  .flake8  .gitignore  Makefile  Procfile  README.md  conftest.py  db.sqlite3  ddd.py  manage.py  package-lock.json  pyproject.toml  requirements.txt  users_fixture.json  а.py
.github/workflows/: run_tests.yml
staticfiles/: staticfiles.json
task_manager/: 1.py  admin.py  filters.py  forms.py  models.py  read_json.py  rollbar.py  settings.py  tests.py  urls.py  views.py  wsgi.py  р.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_status.json  test_task.json  test_user.json  users.json
task_manager/labels/: forms.py  tests.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_remove_task_author_remove_task_executor_and_more.py  0002_remove_task_updated_at.py  0002_status.py  0003_alter_status_name.py  0004_task.py  0005_task_author_alter_task_name_alter_task_status.py  0006_task_created_at_task_executor_task_updated_at_and_more.py  0007_remove_task_executor.py  0008_task_executor.py  0009_alter_task_executor.py  0010_alter_task_executor.py  0011_alter_task_executor.py  0012_alter_task_status.py  0013_alter_task_status.py  0014_alter_status_name_alter_task_author_and_more.py  0015_label_task_labels.py  0016_label_created_at.py  0017_rename_labels_task_label.py  0018_alter_task_label.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
(+33 files in other folders)
